kingston-update-notifier (1.2.1) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * Fix an untranslatable message.

  [ Kai Wasserbäch ]
  * Regenerate POT.
  * Updated German translation.

 -- Sune Vuorela <sune@debian.org>  Sat, 29 Jan 2011 13:29:23 +0100

kingston-update-notifier (1.2+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Added reboot option, thanks to George Stephanos. (Closes: #604684)
  * Added POT file.
  * debian/control:
    - Bumped Standards-Version to 3.9.1, no further changes needed.
    - Added Recommends on anacron. (Closes: #597168)
    - Added Vcs-{Git,Browser} fields.
  * Added my German translation. (Closes: #606008)

 -- Kai Wasserbäch <curan@debian.org>  Wed, 26 Jan 2011 14:28:34 +0100

kingston-update-notifier (1.2) unstable; urgency=low

  * Fix segfault. Closes: #589491

 -- Sune Vuorela <sune@debian.org>  Mon, 19 Jul 2010 20:48:13 +0200

kingston-update-notifier (1.1) unstable; urgency=low

  * Improve messages, mostly by Pino Toscano.
    Includes proper plural messages.
    (Closes: #585783)
  * Fix handling of notifications to not keep adding more, and to kill old
    ones (Closes: #584315)
  * Add a README telling about update notifier kde. Thanks to Michael
    Schuerig.

 -- Sune Vuorela <sune@debian.org>  Fri, 16 Jul 2010 23:45:30 +0200

kingston-update-notifier (1.0) unstable; urgency=low

  * Initial Release.

 -- Sune Vuorela <sune@debian.org>  Sat, 01 May 2010 18:00:56 +0200